# DelveAI

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DelveAI-PLAN.md  DelveAI-RESEARCH.md  DelveAI.md  Makefile  README.md
.delve/sessions/session-1773281860928/: events.jsonl  session.json
.delve/sessions/session-1773281860928/prompts/prompt-1773281888294898000/artifacts/: artifact-1773281888294905000.md
.delve/sessions/session-1773282491938/: events.jsonl  session.json
.delve/sessions/session-1773282491938/prompts/prompt-1773282515388789000/artifacts/: artifact-1773282515388796000.md
.delve/sessions/session-1773282975547/: events.jsonl  intent.md  session.json
.delve/sessions/session-1773283091368/: events.jsonl  intent.md
.delve/sessions/session-1773283483630/: events.jsonl  session.json
.delve/sessions/session-1773283544592/: events.jsonl  session.json
.delve/sessions/session-1773283544592/prompts/prompt-1773283982714966000/: prompt.md
.delve/sessions/session-1773283929721/: events.jsonl  session.json
.delve/sessions/session-1773284369139/: events.jsonl  intent.md  session.json
.github/: release-note-template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
apps/web/: README.md
crates/delve-cli/: Cargo.toml
crates/delve-cli/src/: main.rs
crates/delve-cli/tests/: non_interactive.rs
crates/delve-domain/: Cargo.toml
crates/delve-domain/src/: lib.rs  model.rs
crates/delve-domain/tests/: golden_fixtures.rs
crates/delve-domain/tests/fixtures/: invalid-artifact-parent.json  valid-prompt-continuation.json
crates/delve-orchestrator/: Cargo.toml
crates/delve-orchestrator/src/: lib.rs
crates/delve-providers/: Cargo.toml
crates/delve-providers/src/: lib.rs
crates/delve-server/: Cargo.toml
crates/delve-server/src/: main.rs
crates/delve-storage/: Cargo.toml
crates/delve-storage/src/: lib.rs
(+6 files in other folders)
