[workspace]
members = [
  "crates/delve-domain",
  "crates/delve-storage",
  "crates/delve-orchestrator",
  "crates/delve-providers",
  "crates/delve-cli",
  "crates/delve-server",
]
resolver = "2"

[workspace.package]
authors = ["DelveAI Contributors"]
edition = "2021"
license = "UNLICENSED"
rust-version = "1.76"
version = "0.1.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[workspace.lints.rust]
unsafe_code = "forbid"
