[package]
name = "delve-cli"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true

[[bin]]
name = "delve"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
ctrlc = "3.4"
delve-domain = { path = "../delve-domain" }
delve-orchestrator = { path = "../delve-orchestrator" }
delve-providers = { path = "../delve-providers" }
delve-storage = { path = "../delve-storage" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
