[package]
name = "delve-orchestrator"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
delve-domain = { path = "../delve-domain" }
delve-providers = { path = "../delve-providers" }
serde.workspace = true
serde_json.workspace = true
